# airas-20251023-055954-matsuzawa

./: pyproject.toml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_details.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
.research/prompt/retrieve_code_subgraph/: extract_experimental_info_0.txt  extract_github_url_from_text_0.txt
.research/prompt/retrieve_hugging_face_subgraph/: extract_code_in_readme_model_0.txt
.research/prompt/summarize_paper_subgraph/: summarize_paper_0.txt
config/: config.yaml
config/run/: comparative-1-ResNet-20-0.27-M-parameters--CIFAR-10.yaml  proposed-ResNet-20-0.27-M-parameters--CIFAR-10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
